--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -156,7 +156,6 @@ deny 149.202.79.101;
 deny 149.202.79.129;
 deny 149.56.22.133;
 deny 149.56.44.47;
-deny 150.241.67.214;
 deny 152.53.133.14;
 deny 152.53.53.243;
 deny 154.16.116.61;
@@ -1577,6 +1576,8 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:3f23::1;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1709,6 +1710,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1876,6 +1878,7 @@ deny 81.17.28.95;
 deny 81.181.104.22;
 deny 8.208.26.177;
 deny 8.209.106.19;
+deny 82.153.138.17;
 deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.139.190;
@@ -1909,6 +1912,7 @@ deny 89.147.111.87;
 deny 89.221.215.139;
 deny 89.221.217.206;
 deny 89.234.157.254;
+deny 89.36.231.128;
 deny 89.58.26.216;
 deny 89.58.41.156;
 deny 91.132.144.59;
