--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -505,6 +505,7 @@ deny 185.225.69.232;
 deny 185.225.71.14;
 deny 185.227.134.106;
 deny 185.227.68.78;
+deny 185.231.102.51;
 deny 185.233.100.23;
 deny 185.235.146.29;
 deny 185.235.241.119;
@@ -1574,10 +1575,9 @@ deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
+deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:3f23::1;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1710,7 +1710,6 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
-deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1878,7 +1877,7 @@ deny 81.17.28.95;
 deny 81.181.104.22;
 deny 8.208.26.177;
 deny 8.209.106.19;
-deny 82.153.138.17;
+deny 82.118.248.205;
 deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.139.190;
@@ -1900,6 +1899,7 @@ deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.254.132;
+deny 88.151.117.146;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
