--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -699,6 +699,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
+allow 2a0e:bfc0:0:e::7dc2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
