--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -202,10 +202,12 @@ allow 171.25.193.79;
 allow 171.25.193.80;
 allow 172.104.142.74;
 allow 172.104.182.84;
+allow 172.104.186.73;
 allow 172.104.243.155;
 allow 172.105.161.162;
 allow 172.105.174.195;
 allow 172.232.141.150;
+allow 172.233.82.41;
 allow 172.234.228.174;
 allow 172.245.251.232;
 allow 172.245.33.159;
@@ -219,7 +221,6 @@ allow 173.249.57.253;
 allow 173.255.198.243;
 allow 173.44.141.34;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.138.250;
@@ -650,7 +651,6 @@ allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
 allow 193.36.132.21;
-allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -1009,6 +1009,8 @@ allow 23.236.122.193;
 allow 23.94.211.25;
 allow 23.94.36.167;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
+allow 2400:8901::f03c:95ff:fe89:4a88;
+allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
 allow 2400:d320:2202:5765::1;
 allow 2401:c080:1c02:2d4::;
@@ -1575,7 +1577,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1004::a2;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
@@ -1710,7 +1711,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1867,7 +1867,6 @@ allow 79.124.60.174;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
-allow 80.78.26.167;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 80.94.92.84;
