--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -75,6 +75,7 @@ set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.49;
 set_real_ip_from 107.189.30.69;
 set_real_ip_from 107.189.30.86;
+set_real_ip_from 107.189.3.11;
 set_real_ip_from 107.189.31.232;
 set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.4.12;
@@ -123,6 +124,7 @@ set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.1.107.201;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
 set_real_ip_from 121.78.28.166;
@@ -219,7 +221,6 @@ set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
-set_real_ip_from 173.44.141.34;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
@@ -240,7 +241,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.29.165.177;
-set_real_ip_from 179.35.3.244;
+set_real_ip_from 179.35.5.78;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -649,7 +650,6 @@ set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
-set_real_ip_from 193.32.162.96;
 set_real_ip_from 193.36.132.21;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
@@ -703,7 +703,6 @@ set_real_ip_from 198.98.61.60;
 set_real_ip_from 198.98.62.158;
 set_real_ip_from 199.195.249.214;
 set_real_ip_from 199.195.251.119;
-set_real_ip_from 199.195.251.78;
 set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
@@ -1062,7 +1061,6 @@ set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
-set_real_ip_from 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:20:117a:2605:6400:20:117a;
 set_real_ip_from 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
@@ -1333,6 +1331,7 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
@@ -1380,7 +1379,6 @@ set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:b280:fe01:61::a;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-set_real_ip_from 2a0b:7140:8:1:5054:ff:fe43:9f9;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
@@ -1577,6 +1575,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1004::a2;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
@@ -1608,6 +1607,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc0:0:8::a84e;
+set_real_ip_from 2a0e:bfc0:0:d::d927;
 set_real_ip_from 2a0e:bfc0:0:e::7dc2;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
@@ -1711,6 +1711,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
@@ -1785,6 +1786,7 @@ set_real_ip_from 45.84.107.97;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.168.108;
 set_real_ip_from 45.9.168.113;
+set_real_ip_from 45.9.168.22;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.230;
@@ -1813,6 +1815,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.230.174.6;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1867,6 +1870,7 @@ set_real_ip_from 79.124.60.174;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
+set_real_ip_from 80.78.26.167;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 80.94.92.106;
 set_real_ip_from 80.94.92.84;
@@ -1880,6 +1884,7 @@ set_real_ip_from 82.118.248.205;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
+set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
@@ -1916,7 +1921,6 @@ set_real_ip_from 89.36.231.128;
 set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
 set_real_ip_from 91.132.144.59;
-set_real_ip_from 91.139.160.150;
 set_real_ip_from 91.202.5.104;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.145.116;
