--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -659,7 +659,6 @@ allow 194.156.103.16;
 allow 194.163.130.99;
 allow 194.163.157.49;
 allow 194.233.174.56;
-allow 194.26.192.77;
 allow 194.53.137.156;
 allow 195.160.220.104;
 allow 195.176.3.23;
@@ -925,6 +924,7 @@ allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.113.8;
 allow 205.185.114.112;
+allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.119.35;
@@ -960,7 +960,6 @@ allow 217.199.199.250;
 allow 23.129.64.171;
 allow 23.129.64.172;
 allow 23.129.64.173;
-allow 23.133.204.10;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
@@ -973,6 +972,7 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -995,6 +995,7 @@ allow 23.154.177.31;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
 allow 23.191.200.2;
@@ -1017,11 +1018,6 @@ allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
-allow 2.58.56.12;
-allow 2.58.56.220;
-allow 2.58.56.233;
-allow 2.58.56.35;
-allow 2.58.56.43;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1031,7 +1027,7 @@ allow 2600:3c09::f03c:95ff:fe2d:cc40;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:f704:10::1;
+allow 2602:2e5::104;
 allow 2602:f9f3:0:2::319;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
@@ -1628,11 +1624,6 @@ allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
-allow 2a12:a800:1:1:194:26:192:77;
-allow 2a12:a800:1:1:2:58:56:220;
-allow 2a12:a800:1:1:2:58:56:233;
-allow 2a12:a800:1:1:2:58:56:35;
-allow 2a12:a800:1:1:2:58:56:43;
 allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:202;
 allow 2a12:a800:2:1:185:241:208:204;
