--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -659,7 +659,6 @@ set_real_ip_from 194.156.103.16;
 set_real_ip_from 194.163.130.99;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.233.174.56;
-set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
@@ -925,6 +924,7 @@ set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.113.8;
 set_real_ip_from 205.185.114.112;
+set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
 set_real_ip_from 205.185.119.35;
@@ -960,7 +960,6 @@ set_real_ip_from 217.199.199.250;
 set_real_ip_from 23.129.64.171;
 set_real_ip_from 23.129.64.172;
 set_real_ip_from 23.129.64.173;
-set_real_ip_from 23.133.204.10;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
 set_real_ip_from 23.137.250.83;
@@ -973,6 +972,7 @@ set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
+set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
@@ -995,6 +995,7 @@ set_real_ip_from 23.154.177.31;
 set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.254;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.2;
@@ -1017,11 +1018,6 @@ set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
-set_real_ip_from 2.58.56.12;
-set_real_ip_from 2.58.56.220;
-set_real_ip_from 2.58.56.233;
-set_real_ip_from 2.58.56.35;
-set_real_ip_from 2.58.56.43;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1031,7 +1027,7 @@ set_real_ip_from 2600:3c09::f03c:95ff:fe2d:cc40;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
-set_real_ip_from 2602:f704:10::1;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f9f3:0:2::319;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:9fef::1;
@@ -1628,11 +1624,6 @@ set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
-set_real_ip_from 2a12:a800:1:1:194:26:192:77;
-set_real_ip_from 2a12:a800:1:1:2:58:56:220;
-set_real_ip_from 2a12:a800:1:1:2:58:56:233;
-set_real_ip_from 2a12:a800:1:1:2:58:56:35;
-set_real_ip_from 2a12:a800:1:1:2:58:56:43;
 set_real_ip_from 2a12:a800:2:1:185:241:208:115;
 set_real_ip_from 2a12:a800:2:1:185:241:208:202;
 set_real_ip_from 2a12:a800:2:1:185:241:208:204;
