--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -127,7 +127,7 @@ set_real_ip_from 2600:3c09::f03c:95ff:fe2d:cc40;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
-set_real_ip_from 2602:f704:10::1;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f9f3:0:2::319;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:9fef::1;
@@ -723,11 +723,6 @@ set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
-set_real_ip_from 2a12:a800:1:1:194:26:192:77;
-set_real_ip_from 2a12:a800:1:1:2:58:56:220;
-set_real_ip_from 2a12:a800:1:1:2:58:56:233;
-set_real_ip_from 2a12:a800:1:1:2:58:56:35;
-set_real_ip_from 2a12:a800:1:1:2:58:56:43;
 set_real_ip_from 2a12:a800:2:1:185:241:208:115;
 set_real_ip_from 2a12:a800:2:1:185:241:208:202;
 set_real_ip_from 2a12:a800:2:1:185:241:208:204;
